[package]
name = "rusty-socks"
version = "0.1.0"
authors = ["matias"]
edition = "2018"

[dependencies]
async-trait = "^0.1"
enum-primitive-derive = "^0.1"
log = "^0.4"
futures = { version = "^0.3", features= ["async-await"] }
futures-await-test = "^0.3"
num-traits = "^0.1"
simple_logger = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.5"
tokio = { version = "^0.2", features = ["full"] }
tokio-io = "^0.1"
